--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -33,8 +33,8 @@
 \begin{document}
 
 \title[Short Title]{Hide and Seek: \textit{Geo Edition}}
-\author[Matthias Schöttle/Simon Thelen/Maja Franz/Yannik Südbeck/Lukas Schmidbauer]{\underline{Matthias Schöttle}\inst{1}, Simon Thelen\inst{1}, Maja Franz\inst{1}, Yannik Südbeck, Lukas Schmidbauer\inst{1}}
-\institute{\inst{1} Technical University of Applied Scienes Regensburg %\quad %
+\author[MS/ST/MF/YS/LS]{\underline{Matthias Schöttle}\inst{1}, Simon Thelen\inst{1}, Maja Franz\inst{1}, Yannik Südbeck, Lukas Schmidbauer\inst{1}}
+\institute{\inst{1} Technical University of Applied Scienes Regensburg} %\quad %
 % \inst{2} Some External Intitute \quad %
 % \inst{3} Some Other External institute}
 \date{\today}
@@ -50,33 +50,32 @@
   \vspace*{1em}\setbeamerfont{mainauthor}{size=\fontsize{8.7pt}{9.2}}
   \usebeamerfont{mainauthor}\textbf{\insertauthor}\bigskip\par
   \begin{scriptsize}
-  Conference \newline
+  Hackaburg 2025 \newline
   \insertdate
   \vfill\tiny\insertinstitute
   \end{scriptsize}
   
 }
-\logo{%
-\begin{picture}(0,0)%
-     \put(-340,234){\makebox(0,0)[rt]{\includegraphics[height=0.9cm]{img/external.png}}}%
-  \end{picture}%
-}
+% \logo{%
+% \begin{picture}(0,0)%
+%      \put(-340,234){\makebox(0,0)[rt]{\includegraphics[height=0.9cm]{img/external.png}}}%
+%   \end{picture}%
+% }
 
 \maketitle
 
 \begin{frame}{Great title}
   \setbeamercovered{transparent}
-  \begin{columns}
-    \begin{halfblock}{Some Info}
-      On the right you can see our logo.
+  \begin{halfblock}{What area is best?}
+    $10m^2$? $100m^2$? $1'000m^2$? $10'000m^2$? ... 
+  \end{halfblock}
+\end{frame}
 
-      Below, there is a reference.
-    \end{halfblock}
-    \begin{half}
-      \includegraphics[width=\textwidth]{OTHR_OTHR_Logo.pdf}
-    \end{half}
-  \end{columns}
-  \citefootnote{author24}
+\begin{frame}{Great title}
+  \setbeamercovered{transparent}
+  \begin{halfblock}{Where to hide?}
+      Outdoor or indoor?
+  \end{halfblock}
 \end{frame}
 
 \begin{frame}{Thank You!}
